<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>es.upv.grycap</groupId>
  <artifactId>tracer</artifactId>
  <version>0.1.0-ALPHA</version>
  <packaging>war</packaging>
  <name>Traceability Service</name>
  
  	<!-- Inherit defaults from Spring Boot -->
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.4.4</version>
	</parent>
	
	<properties>
		<bundle.version>none</bundle.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<project.build>201215.1</project.build>
		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>yyMMdd.HHmm</maven.build.timestamp.format>


        <dep.ver.lombok>1.18.16</dep.ver.lombok>
		<dep.ver.powermock>1.7.4</dep.ver.powermock>
		<dep.ver.junit>5.3.1</dep.ver.junit>
		<dep.ver.junit.platform-surefire-provider>1.3.1</dep.ver.junit.platform-surefire-provider>
		<dep.ver.org.apache.poi.poi-ooxml>3.17</dep.ver.org.apache.poi.poi-ooxml>

		<!-- Plugins versions section -->
		<dep.ver.plugin.surefire>2.22.1</dep.ver.plugin.surefire>
		<dep.ver.plugin.jacoco>0.8.2</dep.ver.plugin.jacoco>
		<dep.ver.plugin.failsafe>2.22.1</dep.ver.plugin.failsafe>
		<dep.ver.plugin.assembly>2.4.1</dep.ver.plugin.assembly>
		<dep.ver.plugin.javadoc>2.9</dep.ver.plugin.javadoc>
		<dep.ver.plugin.build-helper>1.5</dep.ver.plugin.build-helper>
		<dep.ver.plugin.jar>2.6</dep.ver.plugin.jar>
		<dep.ver.plugin.checkstyle>3.0.0</dep.ver.plugin.checkstyle>
		<dep.ver.plugin.com.puppycrawl.tools.checkstyle>8.14</dep.ver.plugin.com.puppycrawl.tools.checkstyle>
		<v.org.apache.maven.plugins.maven-compiler-plugin>2.3.2</v.org.apache.maven.plugins.maven-compiler-plugin>

	</properties>
	
	<repositories>
    <repository>
        <id>sonatype</id>
        <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
    </repository>
</repositories>
	
<dependencies> 
<!-- 			<dependency> -->
<!--             <groupId>org.springframework.boot</groupId> -->
<!--             <artifactId>spring-boot-starter-thymeleaf</artifactId> -->
<!--         </dependency> -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-rest</artifactId>
        </dependency>
                <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
        </dependency>
	
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
    <groupId>com.ripple.cryptoconditions</groupId>
    <artifactId>crypto-conditions</artifactId>
    <version>1.0.4</version>
  </dependency>
  
  <dependency>
    <groupId>javax.validation</groupId>
    <artifactId>validation-api</artifactId>
</dependency>
  
  <dependency>
    <groupId>org.bitcoinj</groupId>
    <artifactId>bitcoinj-core</artifactId>
    <version>0.15.10</version>
</dependency>

<dependency>
    <groupId>commons-io</groupId>
    <artifactId>commons-io</artifactId>
    <version>2.9.0</version>
</dependency>
		
		<dependency>
    <groupId>com.h2database</groupId>
    <artifactId>h2</artifactId>
    <scope>runtime</scope>
</dependency>
		

<dependency>
    <groupId>commons-codec</groupId>
    <artifactId>commons-codec</artifactId>
    <scope>provided</scope>
</dependency> 

<dependency>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-web</artifactId>
</dependency>
		
		<dependency>
    <groupId>org.projectlombok</groupId>
    <artifactId>lombok</artifactId>
    <scope>provided</scope>
</dependency>

		</dependencies>
  <!-- Package as an executable jar -->
	<build>
		<resources>

			<resource>
				<filtering>false</filtering>
				<directory>${project.basedir}/src/main/resources</directory>
				<excludes>
					<exclude>**/application*.yml</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				        <groupId>com.github.eirslett</groupId>
				        <artifactId>frontend-maven-plugin</artifactId>
					<version>LATEST_VERSION</version>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<mainClass>es.upv.grycap.tracer.TracerMain</mainClass>
				</configuration>

				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>

			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<configuration>
					<delimiters>
						<delimiter>^</delimiter>
					</delimiters>
					<useDefaultDelimiters>false</useDefaultDelimiters>
				</configuration>
				<executions>
					<execution>
						<id>copy-jar</id>
						<phase>${copy-resource-phase}</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${output-directory}</outputDirectory>
							<resources>
								<resource>
									<!-- Get main artifact -->
									<directory>target</directory>
									<includes>
										<include>${build.finalName}.war</include>
									</includes>
									<!-- Don't filter binary files -->
									<filtering>false</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
					<forkCount>0</forkCount>
					<reuseForks>false</reuseForks>
					<!-- Sets the VM argument line used when unit tests are run. -->
					<argLine>${surefireArgLine}</argLine>
					<!-- Skips unit tests if the value of skip.unit.tests property is true -->
					<skipTests>${skip.unit.tests}</skipTests>
					<!-- Excludes integration tests when unit tests are run. -->
					<excludes>
						<exclude>**/none*.java</exclude>
					</excludes>
					<trimStackTrace>false</trimStackTrace>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${dep.ver.lombok}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>

		</plugins>
		<!--directory>${targetDir}</directory -->
		<finalName>tracer</finalName>
	</build>
</project>
